fixed contrast issues

--- a/lesson-4/css/medium.css
+++ b/lesson-4/css/medium.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 35rem) {
     footer{
         display: block;
-        background-color: rgb(14, 163, 231);
+        background-color: #3685B5;
         padding: 1em;
         border-radius: 12px;
         text-align: center;
