--- a/lesson-4/css/small.css
+++ b/lesson-4/css/small.css
@@ -11,7 +11,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgb(14, 163, 231);
+    background: #3685B5;
 
 }
 header h1 {
@@ -46,7 +46,7 @@ nav{
         list-style: none;
         text-align: center;
         padding: 1em 1.5em;
-        background: #17e4d9;
+        background: #89AAE6;
     }
 
  .dropdown-content a {
@@ -65,7 +65,7 @@ body{
     margin: 0;
     padding: 0;
     font-family:'Open Sans', sans-serif;
-    background: rgb(7, 53, 201);
+    background: #C2CFB2;
 }
 
 h2{
@@ -87,7 +87,7 @@ h2{
 /* Footer rules here */
     footer{
         display: block;
-        background-color: rgb(14, 163, 231);
+        background-color: #3685B5;
         padding: 1em;
         border-radius: 12px;
         text-align: center;
